--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
         <span class="subheader-text">My Work / My Projects</span>
 
         <div class="projects-container">
+          <div class="project-card">
+            <img src="./assets/images/IMAGE_NAME" class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">PROJECT_NAME</div>
+              <div class="body-text project-card-text">SMALL_PROJECT_DESCRIPTION</div>
+            </div>
+            <a class="button" href="./project-pages/duke-robarm.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
           <!-- 
             TODO
 
